fixed footer spacing

--- a/src/App.css
+++ b/src/App.css
@@ -250,8 +250,8 @@ svg {
 }
 
 .icon-large {
-  font-size: 24px;
-  margin-right: 5px;
+  font-size: 36px;
+  margin-right: 15px;
 }
 
 .link:hover {
